# fwtool

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: docs.yml  publish_docs.yml  publish_package.yml  test.yml
docs/source/: api.rst  cli.rst  conf.py  fwtool.rst  index.rst  modules.rst  readme.md
src/fwtool/: cli.py
test/: test_fwtool.py
tests/: test_fwtool.py
