[project]
name = "fwtool"
version = "1.0.0"
description = "A command-line interface for working with a custom firmware header placed at the beginning of a binary image."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [
    {name = "Mohammad Mohsen", email = "kuro.ece@gmail.com"},
]

classifiers = [
    "Programming Language :: Python"
]

dependencies = [
    "crccheck>=1.3.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-sugar>=1.1.1",
    "twine>=6.2.0",
]

[project.scripts]
fwtool = "fwtool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

