[project]
name = "fwtool"
dynamic = ["version"]
description = "A command-line interface for working with a custom firmware header placed at the beginning of a binary image."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    {name = "Mohammad Mohsen", email = "kuro.ece@gmail.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
]

dependencies = [
    "crccheck>=1.3.1",
]

keywords = [
    "firmware",
    "bootloader",
    "binary",
    "crc",
    "embedded",
    "stm32",
    "packaging",
]

[dependency-groups]
dev = [
    "build>=1.4.2",
    "flake8>=7.3.0",
    "hypothesis>=6.151.12",
    "ipython>=9.10.1",
    "isort>=8.0.1",
    "myst-parser>=5.0.0",
    "pytest>=9.0.2",
    "pytest-sugar>=1.1.1",
    "ruff>=0.15.8",
    "sphinx>=9.0.4",
    "sphinx-autodoc-typehints>=3.6.1",
    "sphinx-rtd-theme>=3.1.0",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/ece-mohammad/fwtool"
Documentation = "https://ece-mohammad.github.io/fwtool"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"


[project.scripts]
fwtool = "fwtool.cli:main"

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/fwtool/__init__.py"
